# avif-converter

./: Cargo.toml  PKGBUILD  aviffolder.desktop  convertavif.desktop
benches/: check_pixel.rs
services/: aviffolder.desktop
src/: console.rs  image_avif.rs  image_file.rs  main.rs  name_fun.rs  ssim.rs  utils.rs
src/cli/: mod.rs
src/cli/commands/: avif.rs  mod.rs  png.rs  watch.rs
src/encoders/avif/: alpha.rs  encode.rs  error.rs  mod.rs
src/encoders/avif/format/: boxes.rs  mod.rs  writer.rs
src/exif/: mod.rs
src/ssim/: mod.rs
