[package]
name = "avif-converter"
description = "Simple tool to batch convert multiple images to AVIF"
authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
license = "MIT"
version = "1.4.0-3"
edition = "2021"
readme = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "1.2.0"
clap = { version = "4.2.1", features = ["derive", "cargo"] }
color-eyre = { version = "0.6.2", default_features = false }
env_logger = { version = "0.10.0", default_features = false, features = [
    "auto-color",
] }
hex = "0.4.3"
imgref = "1.9.4"
indicatif = { version = "0.17.3" }
load_image = { version = "3.0.3", features = ["webp"] }
log = "0.4.17"
md5 = { version = "0.7.0", default_features = false }
num_cpus = "1.15.0"
owo-colors = "3.5.0"
rand = "0.8.5"
ravif = "0.11.1"
rayon = "1.7.0"
rgb = "0.8.36"
sha2 = { version = "0.10.6", features = ["asm"] }
spinoff = "0.7.0"
once_cell = "1.17.1"

[package.metadata.archlinux_pkgbuild]
arch = ["x86_64", "aarch64"]
makedepends = ["cargo", "nasm", "libwebp", "lcms2"]
pkgrel = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
