[package]
name = "avif-converter"
description = "Simple tool to batch convert multiple images to AVIF"
authors = ["Ferrah Aiko <ferrahwolfeh@proton.me>"]
license = "MIT"
version = "1.12.0"
edition = "2021"
readme = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytesize = "2.0.1"
clap = { version = "4.5.41", features = ["derive", "cargo"] }
color-eyre = { version = "0.6.5", default_features = false }
env_logger = { version = "0.11.8", default_features = false, features = [
    "auto-color",
] }
hex = "0.4.3"
imgref = "1.11.0"
indicatif = { version = "0.18.0" }
log = "0.4.27"
md5 = { version = "0.8.0", default_features = false }
num_cpus = "1.17.0"
owo-colors = "4.2.2"
rand = "0.9.1"
rgb = "0.8.52"
sha2 = { version = "0.10.9", features = ["asm"] }
spinoff = "0.8.0"
once_cell = "1.21.3"
threadpool = "1.8.1"
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "jpeg",
    "webp",
    "bmp",
    "avif-native",
    "nasm",
    "avif",
] }
rav1e = { version = "0.8.1", default_features = false, features = [
    "threading",
    "asm",
] }
thiserror = "2.0.12"
loop9 = "0.1.3"
notify-rust = { version = "4.11.7", features = ["images"] }
thread-priority = "2.1.0"
notify = "8.1.0"
blake2 = { version = "0.10.6" }
rayon = { version = "1.10.0", optional = true }
atomic_float = "1.1.0"
arrayvec = "0.7.6"
png = "0.17.16"
kamadak-exif = "0.6.1"

[profile.release]
lto = false
opt-level = 3

[features]
default = ["ssim"]
ssim = ["dep:rayon", "indicatif/rayon", "image/rayon"]
